--- a/login.html
+++ b/login.html
@@ -17,7 +17,73 @@
     </div>
 
     <!-- 注册登录 区域 -->
-    <div class="text-box"></div>
+    <div class="text-box">
+        <!-- 背景小图 -->
+        <div class="xbg-box"></div>
+        <!-- 登录dvi -->
+        <div class="form-boxa">
+            <!-- 登录的foem表单 -->
+            <form class="layui-form" id="form_tet">
+                <!-- 用户名输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 提交按钮 -->
+                <div class="layui-form-item">
+                    <!-- 注意 表单提交按钮和普通按钮的区别，就是 lay-submit 类属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;" class="zhuce-sp" id="zhuce">
+                        去注册账号
+                    </a>
+                </div>
+            </form>
+        </div>
+        <!-- 注册dvi -->
+        <div class="form-boxb">
+            <!-- 注册页面的foem表单 -->
+            <form class="layui-form" id="form_txt">
+                <!-- 用户名输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 确认密码输入框 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="请确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 提交按钮 -->
+                <div class="layui-form-item">
+                    <!-- 注意 表单提交按钮和普通按钮的区别，就是 lay-submit 类属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;" class="denglu-sp" id="denglu">去登录</a>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- 导入layui js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 导入jQuery js文件 -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入自己封装的baseAPI.js -->
+    <script src="/assets/js/baseAPI.js"></script>
+    <!-- 导入logjs js文件 -->
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
