完成个人中心的开发

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                         <span class="text-avatar">s</span> 个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
                         <dd>
-                            <a href="">更换头像</a>
+                            <a href="/user/user_avatar.html" target="fm">更换头像</a>
                         </dd>
                         <dd>
-                            <a href="">设置密码</a>
+                            <a href="/user/user_pwd.html" target="fm">设置密码</a>
                         </dd>
                     </dl>
                 </li>
@@ -92,17 +92,17 @@
                         </a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/user/user_info.html" target="fm">
                                     <i class="layui-icon layui-icon-fire"></i> 基本资料
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/user/user_avatar.html" target="fm">
                                     <i class="layui-icon layui-icon-snowflake"></i> 更换头像
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/user/user_pwd.html" target="fm">
                                     <i class="layui-icon layui-icon-rate-solid"></i> 重置密码
                                 </a>
                             </dd>
