--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
                         </a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/article/art_cate.html" target="fm">
                                     <i class="layui-icon layui-icon-water"></i> 文章类别
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/article/art_list.html" target="fm">
                                     <i class="layui-icon layui-icon-tree"></i> 文章列表
                                 </a>
                             </dd>
                             <dd>
-                                <a href="javascript:;">
+                                <a href="/article/art_pub.html" target="fm">
                                     <i class="layui-icon layui-icon-diamond"></i> 发布文章
                                 </a>
                             </dd>
